2015-09-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-55

	* src/sensor.cc (find_effective_channel_boundaries):

	Add runtime error with (hopefully) helpful error message if no
	passbands are detected.

2015-09-07  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-54

	* controlfiles/classroom_exercises/:

	Added exercises. Controlfiles, matlab scripts and assignments provided
	by Theresa Lang.

	* doc/classroom_excercises_solutions:

	Added solutions for exercises. Provided by Theresa Lang.

	* doc/CMakeLists.txt: Added solutions subdir.

	* controlfiles/CMakeLists.txt:

	Add exercises as tests.

	Add custom target mkdir-arts-results as the exercises require an
	'results' folder to be present.

	* cmake/modules/ArtsBuildTexDoc.cmake:

	Add macro ARTS_ADD_SIMPLE_TEX_DOC. Used to compile exercise solutions.

	* CMakeLists.txt:

	Add exercises to check-xmldata. Also add special target check-classroom.

	Add mkdir-arts-results as a dependency for both targets.

2015-08-27  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-53

	* src/m_abs.cc (abs_linesReadFromHitran):

	Don't require the full catalog filename to match
	hitran2012.par/hitran08.par. Only require that it starts with
	hitran2012/hitran08 (case insensitive). Change proposed by Patrick to
	make it easier to read custom catalogs.	

2015-08-12  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-52

	* src/m_xml.h (WriteXML):

	Intercept exceptions crossing the critical region border. Fixes bug
	reported by gerrit in trac ticket #127.

	* src/xml_io.cc (xml_open_output_file):

	Catch file.open exceptions more broadly as different compilers throw
	different types of exception for the same error.

2015-08-10  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-51

	* src/workspace.cc: Update docs for verbosity WSM.

2015-08-05  Gerrit Holl  <g.holl@reading.ac.uk>

	* arts-2-2-50

	* doc/uguide/common.tex, doc/uguide/concept.tex:

	- Update docserver links to Hamburg server
